fix selection on mobile on people page

--- a/stylesrc/people.styl
+++ b/stylesrc/people.styl
@@ -33,8 +33,10 @@ h1.title
     .tile-label
       visibility: hidden
       z-index: 5
-      user-select: none
       letter-spacing: 1px
+
+      h3
+        user-select: none
 
     .tile-label::before
       content: "";
